# Smush-Material-Research

./: .gitignore  Cargo.toml  Debugging.md  Material Labels by Name v3.0.7z  Material Parameters.md  Material Transitions.md  Numatb Xml Dump v3.0.7z  README.md  Render Passes.md  Shaders.md  Stage Light Parameters.md  Stage Light Unique Values v3.0.7z  Textures.md  Unique Material Values Dump v1.0.7z  Unique Material Values Dump v3.0.7z  Vertex Attributes.md  XMB.md  book.css  colorsets.md  hair_materials.md  index.html  index.md  prm.md  process.py  robots.txt  search_index.en.js  sitemap.xml  texturecoordinates.md
Scripts/: batch_convert_files.py  batch_decompile_shaders.py  batch_export_light_value_occurrences.py  batch_export_material_param_occurrences.py  batch_export_material_param_value_occurrences.py  batch_export_material_param_values.py  batch_export_shader_info.py  batch_export_xmb_to_xml.py  batch_numatb_to_xml.py  cleanup_shader.py  create_shader_db.py  create_sqlite_material_db.py  find_material_from_xml_dump.py  get_shader_info.py  graph_correlation.py  graph_occurrences.py  graph_vector4.py  print_dependencies.py  ultimate_materials_models_resource.py
Value Dumps/: Decompiled Shaders.7z  Filepaths by Material Name v3.0.7z  Material Values Dump v5.0.7z  Nufx.db v11.0.0.7z  Nufx.db v13.0.0.7z  Nufxb v10.1.0.7z  Nufxb v5.0.7z  Numatb as Xml v5.0 and DLC.7z  Numatb as Xml v5.0.7z  ParamIDs.csv  Parameter Occurrences v5.0.7z  Parameter Value Occurrence Dump v5.0.7z  (+21 more)
smush_materials/: Cargo.toml
smush_materials/src/: annotation.rs  database.rs  dependencies.rs  main.rs
(+171 files in other folders)
