[package]
name = "smush_materials"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
globwalk = "0.9.1"
rayon = "1.5.1"
xmltree = { version = "0.10.3", features = ["attribute-order"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
xmb_lib = { git = "https://github.com/ultimate-research/xmb_lib" }
ssbh_lib = { git = "https://github.com/ultimate-research/ssbh_lib" }
ssbh_data = { git = "https://github.com/ultimate-research/ssbh_lib", features=["serde"] }
glsl = "6.0.2"
# TODO: dedicated library without additional Xenoblade dependencies
xc3_shader = { git = "https://github.com/ScanMountGoat/xc3_lib", default-features = false }

[dev-dependencies]
indoc = "2.0"
pretty_assertions = "1.4.1"